[gd_scene load_steps=4 format=3 uid="uid://byr2oaqk1iouq"]

[ext_resource type="Script" path="res://scripts/win.gd" id="1_aethj"]
[ext_resource type="FontFile" uid="uid://dctf0jxqnw51m" path="res://Lato-Black.ttf" id="1_ui1u8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7mn32"]
bg_color = Color(0, 0.54902, 0.105882, 0.956863)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Win" type="CanvasLayer"]
script = ExtResource("1_aethj")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7mn32")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 175

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/Rows/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ui1u8")
theme_override_font_sizes/font_size = 160
text = "CODE: 200"
horizontal_alignment = 1

[node name="SubTitle" type="Label" parent="PanelContainer/MarginContainer/Rows/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ui1u8")
theme_override_font_sizes/font_size = 50
text = "OK

You successfully posted your game! Congrats"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/Rows"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 95

[node name="btn_MainMenu" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_stretch_ratio = 20.0
theme_override_fonts/font = ExtResource("1_ui1u8")
theme_override_font_sizes/font_size = 80
text = "    MAIN MENU    "

[node name="btn_Quit" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ui1u8")
theme_override_font_sizes/font_size = 50
text = "QUIT
"

[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/btn_MainMenu" to="." method="_on_btn_main_menu_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/btn_Quit" to="." method="_on_btn_quit_pressed"]
